Add template, sidemenu, login Ldap

--- a/PLANT_PPE/Views/Login/Index.cshtml
+++ b/PLANT_PPE/Views/Login/Index.cshtml
@@ -4,8 +4,114 @@
     ViewBag.Title = "Auth";
 }
 
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <title>Login | PPE</title>
+
+    <!-- Icons -->
+<!-- The following icons can be replaced with your own, they are used by desktop and mobile browsers -->
+<!--<link rel="shortcut icon" href="~/Content/assets/media/favicons/favicon.png">-->
+<!-- END Icons -->
+<!-- Stylesheets -->
+<!--<link rel="stylesheet" href="~/Content/assets/js/plugins/select2/css/select2.min.css">
+<link rel="stylesheet" href="~/Content/assets/js/plugins/sweetalert2/sweetalert2.min.css">-->
+<!-- Fonts and Codebase framework -->
+<!--<link rel="stylesheet" id="css-main" href="~/Content/assets/css/codebase.min.css">
+<link id="css-theme" rel="stylesheet" href="~/Content/assets/css/themes/earth.min.css">-->
+@*<link href="~/Content/Site.css" rel="stylesheet" />*@
+
+<!-- You can include a specific file from css/themes/ folder to alter the default color theme of the template. eg: -->
+<!-- <link rel="stylesheet" id="css-theme" href="~/Content/assets/css/themes/flat.min.css"> -->
+<!-- END Stylesheets -->
+<!--<script src="~/Content/assets/js/lib/jquery.min.js"></script>
+
+</head>
+<body>
+    <div id="overlay">
+        <div class="cv-spinner">
+            <span class="spinner"></span>
+        </div>
+    </div>
+
+    <input type="text" id="web_link" value="@Session["Web_Link"]" hidden />
+
+    <div id="page-container" class="main-content-boxed">-->
+<!-- Main Container -->
+<!--<main id="main-container">-->
+<!-- Page Content -->
+<!--<div class="bg-white">
+    <div class="hero-static content content-full bg-body-extra-light">-->
+<!-- Header -->
+<!--<div class="py-4 px-1 text-center mb-4">
+    <a class="link-fx fw-bold" href="index.html">
+        <i class="fa fa-fire"></i>
+        <span class="fs-4 text-body-color">KPP</span><span class="fs-4">PPE</span>
+    </a>
+    <h1 class="h3 fw-bold mt-5 mb-2">Welcome to Your Dashboard</h1>
+    <h2 class="h5 fw-medium text-muted mb-0">Please sign in</h2>
+</div>-->
+<!-- END Header -->
+<!-- Sign In Form -->
+<!--<div class="row justify-content-center px-1">
+    <div class="col-sm-8 col-md-6 col-xl-4">
+        <form class="js-validation-signin" action="" method="POST" novalidate="novalidate">
+            <div class="form-floating mb-4">
+                <input type="text" class="form-control form-control-sm" id="login-username" name="login-username" placeholder="Enter your username" onchange="addJobsite();">
+                <label class="form-label" for="login-username">kNRP</label>
+            </div>
+            <div class="form-floating mb-4">
+                <input type="password" class="form-control form-control-sm" id="login-password" name="login-password" placeholder="Enter your password">
+                <label class="form-label" for="login-password">Password</label>
+            </div>
+            <hr />
+            <div class="form-group mb-4">
+                <label class="form-label" for="jobSite">Jobsite</label>
+                <select class="js-select2 form-select" id="jobSite" name="jobSite" style="width: 100%;">
+                    <option>Loading...</option>
+                </select>
+            </div>
+            <div class="row g-sm mb-4">
+                <div class="col-12 mb-2">
+                    <button type="button" onclick="PostLogin()" class="btn btn-lg btn-alt-primary w-100 py-3 fw-semibold">
+                        Sign In
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>-->
+<!-- END Sign In Form -->
+<!--</div>
+</div>-->
+<!-- END Page Content -->
+<!--</main>-->
+<!-- END Main Container -->
+<!--</div>-->
+<!-- END Page Container -->
+<!--
+    Codebase JS
+
+    Core libraries and functionality
+    webpack is putting everything together at ~/Content/assets/_js/main/app.js
+-->
+<!--<script src="~/Content/assets/js/codebase.app.min.js"></script>
+    <script src="~/Content/assets/js/plugins/sweetalert2/sweetalert2.min.js"></script>
+
+    <script src="~/Content/assets/js/plugins/select2/js/select2.full.min.js"></script>
+    <script>
+        Codebase.helpersOnLoad(['jq-select2']);
+    </script>
+    <script src="~/Scripts/Page/login.js"></script>
+
+</body>
+</html>-->
+
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -23,7 +129,7 @@
     <!-- Fonts and Codebase framework -->
     <link rel="stylesheet" id="css-main" href="~/Content/assets/css/codebase.min.css">
     <link id="css-theme" rel="stylesheet" href="~/Content/assets/css/themes/earth.min.css">
-    <link href="~/Content/Site.css" rel="stylesheet" />
+    @*<link href="~/Content/Site.css" rel="stylesheet" />*@
 
     <!-- You can include a specific file from css/themes/ folder to alter the default color theme of the template. eg: -->
     <!-- <link rel="stylesheet" id="css-theme" href="~/Content/assets/css/themes/flat.min.css"> -->
@@ -31,8 +137,12 @@
 
     <script src="~/Content/assets/js/lib/jquery.min.js"></script>
 
+    <!-- You can include a specific file from css/themes/ folder to alter the default color theme of the template. eg: -->
+    <!-- <link rel="stylesheet" id="css-theme" href="assets/css/themes/flat.min.css"> -->
+    <!-- END Stylesheets -->
 </head>
 <body>
+
     <div id="overlay">
         <div class="cv-spinner">
             <span class="spinner"></span>
@@ -46,22 +156,34 @@
         <!-- Main Container -->
         <main id="main-container">
             <!-- Page Content -->
-            <div class="bg-white">
-                <div class="hero-static content content-full bg-body-extra-light">
-                    <!-- Header -->
-                    <div class="py-4 px-1 text-center mb-4">
-                        <a class="link-fx fw-bold" href="index.html">
-                            <i class="fa fa-fire"></i>
-                            <span class="fs-4 text-body-color">KPP</span><span class="fs-4">PPE</span>
-                        </a>
-                        <h1 class="h3 fw-bold mt-5 mb-2">Welcome to Your Dashboard</h1>
-                        <h2 class="h5 fw-medium text-muted mb-0">Please sign in</h2>
+            <div class="bg-image" style="background-image: url('Content/assets/media/photos/yyyy.jpg');">
+                <div class="row mx-0 bg-black-50">
+                    <div class="hero-static col-md-6 col-xl-8 d-none d-md-flex align-items-md-end">
+                        <div class="p-4">
+                            <p class="fs-3 fw-semibold text-white">
+                                Get Inspired and Create.
+                            </p>
+                            <p class="text-white-75 fw-medium">
+                                Copyright &copy; <span data-toggle="year-copy"></span>
+                            </p>
+                        </div>
                     </div>
-                    <!-- END Header -->
-                    <!-- Sign In Form -->
-                    <div class="row justify-content-center px-1">
-                        <div class="col-sm-8 col-md-6 col-xl-4">
-                            <form class="js-validation-signin" action="" method="POST" novalidate="novalidate">
+                    <div class="hero-static col-md-6 col-xl-4 d-flex align-items-center bg-body-extra-light">
+                        <div class="content content-full">
+                            <!-- Header -->
+                            <div class="px-4 py-2 mb-4">
+                                <a class="link-fx fw-bold" href="">
+                                    <i class="fa fa-fire"></i>
+                                    <span class="fs-4 text-body-color">KPP</span><span class="fs-4">PPE</span>
+                                </a>
+                                <h1 class="h3 fw-bold mt-4 mb-2">Welcome to Your Dashboard</h1>
+                                <h2 class="h5 fw-medium text-muted mb-0">Please sign in</h2>
+                            </div>
+                            <!-- END Header -->
+                            <!-- Sign In Form -->
+                            <!-- jQuery Validation functionality is initialized with .js-validation-signin class in js/pages/op_auth_signin.min.js which was auto compiled from _js/pages/op_auth_signin.js -->
+                            <!-- For more examples you can check out https://github.com/jzaefferer/jquery-validation -->
+                            <form class="js-validation-signin px-4" action="" method="POST" novalidate="novalidate">
                                 <div class="form-floating mb-4">
                                     <input type="text" class="form-control form-control-sm" id="login-username" name="login-username" placeholder="Enter your username" onchange="addJobsite();">
                                     <label class="form-label" for="login-username">kNRP</label>
@@ -77,17 +199,15 @@
                                         <option>Loading...</option>
                                     </select>
                                 </div>
-                                <div class="row g-sm mb-4">
-                                    <div class="col-12 mb-2">
-                                        <button type="button" onclick="PostLogin()" class="btn btn-lg btn-alt-primary w-100 py-3 fw-semibold">
-                                            Sign In
-                                        </button>
-                                    </div>
+                                <div class="mb-4">
+                                    <button type="button" onclick="PostLogin()" class="btn btn-lg btn-alt-primary fw-semibold">
+                                        Sign In
+                                    </button>
                                 </div>
                             </form>
+                            <!-- END Sign In Form -->
                         </div>
                     </div>
-                    <!-- END Sign In Form -->
                 </div>
             </div>
             <!-- END Page Content -->
@@ -99,7 +219,7 @@
         Codebase JS
 
         Core libraries and functionality
-        webpack is putting everything together at ~/Content/assets/_js/main/app.js
+        webpack is putting everything together at assets/_js/main/app.js
     -->
     <script src="~/Content/assets/js/codebase.app.min.js"></script>
     <script src="~/Content/assets/js/plugins/sweetalert2/sweetalert2.min.js"></script>
@@ -109,6 +229,5 @@
         Codebase.helpersOnLoad(['jq-select2']);
     </script>
     <script src="~/Scripts/Page/login.js"></script>
-
 </body>
 </html>
