--- a/PLANT_PPE/Views/Shared/_Layout.cshtml
+++ b/PLANT_PPE/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <!-- Fonts and Codebase framework -->
     <link rel="stylesheet" id="css-main" href="~/Content/assets/css/codebase.min.css">
     <link id="css-theme" rel="stylesheet" href="~/Content/assets/css/themes/earth.min.css">
-    <link href="~/Content/Site.css" rel="stylesheet" />
+    @*<link href="~/Content/Site.css" rel="stylesheet" />*@
 
     <script src="~/Content/assets/js/lib/jquery.min.js"></script>
 
