--- a/PLANT_PPE/Views/Shared/_Layout.cshtml
+++ b/PLANT_PPE/Views/Shared/_Layout.cshtml
@@ -210,7 +210,7 @@
 
     <script src="@Html.Raw(ViewBag.JS)"></script>
 
-    <script type="text/javascript">
+    @*<script type="text/javascript">
         var url = window.location;
 
         var element = $('ul.nav-main li a').filter(function () {
@@ -219,7 +219,7 @@
         element.addClass('active');
         element.parent().parent().parent().addClass("open");
 
-    </script>
+    </script>*@
 
 
 </body>
