--- a/PLANT_PPE/Views/Login/Index.cshtml
+++ b/PLANT_PPE/Views/Login/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿
 @{
     Layout = null;
-    ViewBag.Title = "Auth";
 }
 
 <!--<!DOCTYPE html>
@@ -156,7 +155,7 @@
         <!-- Main Container -->
         <main id="main-container">
             <!-- Page Content -->
-            <div class="bg-image" style="background-image: url('Content/assets/media/photos/yyyy.jpg');">
+            <div class="bg-image" style="background-image: url('Content/assets/media/photos/');">
                 <div class="row mx-0 bg-black-50">
                     <div class="hero-static col-md-6 col-xl-8 d-none d-md-flex align-items-md-end">
                         <div class="p-4">
