--- a/PLANT_PPE/Content/Site.css
+++ b/PLANT_PPE/Content/Site.css
@@ -1,30 +1,49 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿#overlay {
+    position: fixed;
+    top: 0;
+    z-index: 1060;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background: rgba(0,0,0,0.6);
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+.cv-spinner {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+.spinner {
+    width: 40px;
+    height: 40px;
+    border: 4px #ddd solid;
+    /*border-top: 4px #2e93e6 solid;*/
+    border-top: 4px #29a65c solid;
+    border-radius: 50%;
+    animation: sp-anime 0.8s infinite linear;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+@keyframes sp-anime {
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
-.navbar-inverse .navbar-toggle:hover,
-.navbar-inverse .navbar-toggle:focus {
-    background-color: #777;
-    border-color: #fff
+/* force select2 to match bootstrap form-control-sm */
+.select2, .select2-selection__rendered {
+    line-height: calc(1.5em + .5rem + 2px) !important;
+}
+
+.select2-container .select2-selection--single {
+    height: calc(1.5em + .5rem + 2px) !important;
+}
+
+.select2-selection__arrow {
+    height: calc(1.5em + .5rem + 2px) !important;
+}
+
+.btn-primary {
+    color: white;
 }
