--- a/PLANT_PPE/Views/Login/Index.cshtml
+++ b/PLANT_PPE/Views/Login/Index.cshtml
@@ -128,7 +128,7 @@
     <!-- Fonts and Codebase framework -->
     <link rel="stylesheet" id="css-main" href="~/Content/assets/css/codebase.min.css">
     <link id="css-theme" rel="stylesheet" href="~/Content/assets/css/themes/earth.min.css">
-    @*<link href="~/Content/Site.css" rel="stylesheet" />*@
+    <link href="~/Content/Site.css" rel="stylesheet" />
 
     <!-- You can include a specific file from css/themes/ folder to alter the default color theme of the template. eg: -->
     <!-- <link rel="stylesheet" id="css-theme" href="~/Content/assets/css/themes/flat.min.css"> -->
@@ -145,6 +145,7 @@
     <div id="overlay">
         <div class="cv-spinner">
             <span class="spinner"></span>
+            @*<span class="spinner-grow spinner-grow-sm text-success"></span>*@
         </div>
     </div>
 
