--- a/PLANT_PPE/Views/Shared/_Layout.cshtml
+++ b/PLANT_PPE/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <!-- Fonts and Codebase framework -->
     <link rel="stylesheet" id="css-main" href="~/Content/assets/css/codebase.min.css">
     <link id="css-theme" rel="stylesheet" href="~/Content/assets/css/themes/earth.min.css">
-    @*<link href="~/Content/Site.css" rel="stylesheet" />*@
+    <link href="~/Content/Site.css" rel="stylesheet" />
 
     <script src="~/Content/assets/js/lib/jquery.min.js"></script>
 
@@ -207,19 +207,33 @@
 
     <script src="~/Content/assets/js/plugins/sweetalert2/sweetalert2.min.js"></script>
     <script src="~/Content/assets/js/plugins/select2/js/select2.full.min.js"></script>
+    <script src="~/Content/assets/js/pages/be_ui_progress.min.js"></script>
+    <!--<script src="~/Content/assets/js/plugins/ckeditor/ckeditor.js"></script>-->
+
+    <!-- Page JS Helpers (SimpleMDE + CKEditor plugins) -->
+    <!--<script>
+        Codebase.helpersOnLoad(['js-ckeditor', 'js-simplemde']);
+    </script>-->
+
+    <script src="~/Content/assets/js/plugins/ckeditor5-classic/build/ckeditor.js"></script>
+
+    <!-- Page JS Helpers (CKEditor 5 plugins) -->
+    <script>
+        Codebase.helpersOnLoad(['js-ckeditor5']);
+    </script>
 
     <script src="@Html.Raw(ViewBag.JS)"></script>
 
-    @*<script type="text/javascript">
+    <script type="text/javascript">
         var url = window.location;
 
         var element = $('ul.nav-main li a').filter(function () {
             return this.href == url;
         });
-        element.addClass('active');
         element.parent().parent().parent().addClass("open");
+        element.addClass('active');
 
-    </script>*@
+    </script>
 
 
 </body>
