--- a/PLANT_PPE/Views/Setting/Agreement.cshtml
+++ b/PLANT_PPE/Views/Setting/Agreement.cshtml
@@ -32,7 +32,7 @@
         <form action="be_forms_editors.html" method="POST" onsubmit="return false;">
             <div class="mb-4">
                 <!-- CKEditor 5 Classic Container -->
-                <div id="js-ckeditor5-classic"></div>
+                <div id="js-ckeditor5-classic"><input type="text" id="txt_ID" hidden /></div>
             </div>
         </form>
     </div>
