--- a/PLANT_PPE/Views/PPE/Register.cshtml
+++ b/PLANT_PPE/Views/PPE/Register.cshtml
@@ -31,7 +31,8 @@
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label" for="txt_locFrom">Location</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control form-control-sm " id="txt_locFrom" name="txt_locFrom" readonly>
+                        <select class="js-select2 form-select" id="txt_locFrom" name="txt_locFrom" style="width: 100%;">
+                        </select>
                     </div>
                 </div>
             </div>
@@ -60,7 +61,8 @@
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label" for="txt_locTo">Location</label>
                     <div class="col-sm-8">
-                        <input type="text" class="form-control form-control-sm " id="txt_locTo" name="txt_locTo" readonly>
+                        <select class="js-select2 form-select" id="txt_locTo" name="txt_locTo" style="width: 100%;">
+                        </select>
                     </div>
                 </div>
             </div>
