Add data value to equipment table

--- a/PLANT_PPE/Views/PPE/Register.cshtml
+++ b/PLANT_PPE/Views/PPE/Register.cshtml
@@ -134,7 +134,7 @@
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label" for="txt_attach">Attachment</label>
                     <div class="col-sm-8">
-                        <input class="form-control" type="file" id="example-file-input">
+                        <input class="form-control" type="file" id="txt_attach">
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                     <button type="submit" class="btn btn-sm btn-info" onclick="savePPEtoTable()">
                         <i class="fa fa-floppy-disk opacity-50 me-1"></i> Save
                     </button>
-                    <button type="submit" id="submit_button" class="btn btn-sm btn-success" value="SUBMITTED" onclick="saveBacklog(this.value)">
+                    <button type="submit" id="submit_button" class="btn btn-sm btn-success" onclick="savePPE()">
                         <i class="fa fa-check-circle opacity-50 me-1"></i> Submit
                     </button>
                 </div>
@@ -196,58 +196,28 @@
     </div>
 </div>
 
-<!--<div class="block block-rounded">
-    <div class="block-header block-header-default">
-        <h3 class="block-title">
-            Daftar Equipment <small>PPE</small>
-        </h3>
-    </div>
-    <div class="block-content block-content-full">
-        <table class="table table-bordered table-striped table-vcenter js-dataTable-responsive w-100" id="table_equipment">
-            <thead class="text-center bg-primary text-white">
-                <tr>-->
-                    @*<th class="text-center">No</th>*@
-                    <!--<th>No Ppe</th>
-                    <th>Date</th>
-                    <th>Eqp Number</th>
-                    <th>PPE Description</th>
-                    <th>Egi</th>
-                    <th>Eqp Class</th>
-                    <th>Serial Number</th>
-                    <th>District From</th>
-                    <th>Loc From</th>
-                    <th>District To</th>
-                    <th>Loc To</th>
-                    <th>Remarks</th>
-                    <th>Attachment</th>
-                    <th>Delete</th>-->
-                    @*<th>Action</th>*@
-                <!--</tr>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-    </div>
-</div>-->
-
-@*<script>
+<script>
     function savePPEtoTable() {
         var date = $("#txt_date").val();
+        var formattedDate = formatDate(date);
+
         var ppeNo = $("#txt_noPPE").val();
-        var eqNumber = $("#txt_eqNumber option:selected").val();
+        var eqNumber = $("#txt_eqNumber").val();
         var ppeDescription = $("#txt_ppeDesc").val();
         var egi = $("#txt_egi").val();
         var eqClass = $("#txt_eqClass").val();
         var serialNumber = $("#txt_serialNo").val();
-        var districtFrom = $("#txt_districtFrom option:selected").val();
-        var locFrom = $("#txt_locFrom option:selected").val();
-        var districtTo = $("#txt_districtTo option:selected").val();
-        var locTo = $("#txt_locTo option:selected").val();
+        var districtFrom = $("#txt_districtFrom").val();
+        var locFrom = $("#txt_locFrom").val();
+        var districtTo = $("#txt_districtTo").val();
+        var locTo = $("#txt_locTo").val();
+        var remark = $("#txt_remark").val();
+        var attch = $("#txt_attach").val();
 
         var rowCount = $("#table_equipment tbody tr").length + 1;
         var row = "<tr>" +
             "<td class='text-center'>" + rowCount + "</td>" +
-            "<td>" + date + "</td>" +
+            "<td>" + formattedDate + "</td>" +
             "<td>" + ppeNo + "</td>" +
             "<td>" + eqNumber + "</td>" +
             "<td>" + ppeDescription + "</td>" +
@@ -258,26 +228,37 @@
             "<td>" + locFrom + "</td>" +
             "<td>" + districtTo + "</td>" +
             "<td>" + locTo + "</td>" +
-            "<td><button class='btn btn-sm btn-danger' onclick='removeRow(this)'>Remove</button></td>" +
+            "<td>" + remark + "</td>" +
+            "<td>" + attch + "</td>" +
+            "<td><button class='btn btn-sm btn-danger' onclick='removeRow(this)'>DELETE</button></td>" +
             "</tr>";
 
         $("#table_equipment tbody").append(row);
 
-        // Clear input fields after adding the row
-        $("#txt_date").val("");
-        $("#txt_noPPE").val("");
-        $("#txt_eqNumber").val("").trigger("change");
-        $("#txt_ppeDesc").val("");
-        $("#txt_egi").val("");
-        $("#txt_eqClass").val("");
-        $("#txt_serialNo").val("");
-        $("#txt_districtFrom").val("").trigger("change");
-        $("#txt_locFrom").val("").trigger("change");
-        $("#txt_districtTo").val("").trigger("change");
-        $("#txt_locTo").val("").trigger("change");
+        // Clear input
+        //$("#txt_date").val("");
+        //$("#txt_noPPE").val("");
+        //$("#txt_eqNumber").val("");
+        //$("#txt_ppeDesc").val("");
+        //$("#txt_egi").val("");
+        //$("#txt_eqClass").val("");
+        //$("#txt_serialNo").val("");
+        //$("#txt_districtFrom").val("");
+        //$("#txt_locFrom").val("");
+        //$("#txt_districtTo").val("");
+        //$("#txt_locTo").val("");
+        //$("#txt_remark").val("");
+        //$("#txt_attach").val("");
     }
 
     function removeRow(button) {
         $(button).closest("tr").remove();
     }
-</script>*@
+    function formatDate(date) {
+        var parts = date.split("-");
+        var day = parts[2];
+        var month = parts[1];
+        var year = parts[0];
+        return day + "/" + month + "/" + year;
+    }
+</script>
