--- a/PLANT_PPE/Views/Setting/Agreement.cshtml
+++ b/PLANT_PPE/Views/Setting/Agreement.cshtml
@@ -15,7 +15,7 @@
         </h3>
         <div class="block-options">
             <button type="button" class="btn-block-option">
-                <i class="si si-settings"></i>
+                <i class="si si-note" id="getModifiedDate"></i>
             </button>
         </div>
     </div>
