--- a/PLANT_PPE/Views/Shared/_Layout.cshtml
+++ b/PLANT_PPE/Views/Shared/_Layout.cshtml
@@ -209,17 +209,16 @@
     <script src="~/Content/assets/js/plugins/select2/js/select2.full.min.js"></script>
     <script src="~/Content/assets/js/pages/be_ui_progress.min.js"></script>
     <!--<script src="~/Content/assets/js/plugins/ckeditor/ckeditor.js"></script>-->
-
     <!-- Page JS Helpers (SimpleMDE + CKEditor plugins) -->
     <!--<script>
         Codebase.helpersOnLoad(['js-ckeditor', 'js-simplemde']);
     </script>-->
 
     <script src="~/Content/assets/js/plugins/ckeditor5-classic/build/ckeditor.js"></script>
-
+    <script src="~/Content/assets/js/plugins/bootstrap-notify/bootstrap-notify.min.js"></script>
     <!-- Page JS Helpers (CKEditor 5 plugins) -->
     <script>
-        Codebase.helpersOnLoad(['js-ckeditor5']);
+        Codebase.helpersOnLoad(['js-ckeditor5', 'jq-notify']);
     </script>
 
     <script src="@Html.Raw(ViewBag.JS)"></script>
