--- a/PLANT_PPE/Views/PPE/Register.cshtml
+++ b/PLANT_PPE/Views/PPE/Register.cshtml
@@ -86,6 +86,7 @@
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label" for="txt_noPPE">No PPE</label>
                     <div class="col-sm-8">
+                        <input type="text" class="form-control form-control-sm " id="txt_createBy" name="txt_createBy" value="@Session["Nrp"].ToString()" hidden>
                         <input type="text" class="form-control form-control-sm " id="txt_noPPE" name="txt_noPPE" value="@ViewBag.NoPPE" readonly>
                     </div>
                 </div>
@@ -126,15 +127,13 @@
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label" for="txt_remark">Remarks</label>
                     <div class="col-sm-8">
-                        @*<textarea class="form-control form-control-sm " id="txt_remark" name="txt_remark"></textarea>*@
                         <textarea class="form-control form-control-alt" id="txt_remark" name="txt_remark" rows="7" placeholder="Textarea content.."></textarea>
-                        @*<input type="text" class="form-control form-control-sm " id="txt_remark" name="txt_remark">*@
                     </div>
                 </div>
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label" for="txt_attach">Attachment</label>
                     <div class="col-sm-8">
-                        <input class="form-control" type="file" id="txt_attach">
+                        <input class="form-control" type="file" accept=".pdf,.docx" id="txt_attach">
                     </div>
                 </div>
             </div>
