--- a/PLANT_PPE/Views/PPE/Register.cshtml
+++ b/PLANT_PPE/Views/PPE/Register.cshtml
@@ -136,6 +136,28 @@
                         <input class="form-control" type="file" accept=".pdf,.docx" id="txt_attach">
                     </div>
                 </div>
+                @*<div class="mb-4">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#modal-terms">Terms &amp; Conditions</a>
+                    <span class="text-danger">*</span>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="val-terms" name="val-terms" value="1" disabled>
+                        <label class="form-check-label" for="val-terms">I agree</label>
+                    </div>
+                </div>*@
+                <div class="mb-4">
+                    <div class="row">
+                        <div class="col-auto">
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-terms">Terms &amp; Conditions</a>
+                            <span class="text-danger">*</span>
+                        </div>
+                        <div class="col-auto">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" id="val-terms" name="val-terms" value="1" disabled>
+                                <label class="form-check-label" for="val-terms">I agree</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -190,6 +212,31 @@
                     </thead>
                     <tbody></tbody>
                 </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="modal-terms" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-popin">
+        <div class="modal-content">
+            <div class="block block-rounded shadow-none mb-0">
+                <div class="block-header block-header-default">
+                    <h3 class="block-title">Terms &amp; Conditions</h3>
+                    <div class="block-options">
+                        <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close">
+                            <i class="fa fa-times"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="block-content fs-sm" id="agreeModals">
+                    
+                </div>
+                <div class="block-content block-content-full block-content-sm text-end border-top">
+                    <button type="button" class="btn btn-alt-primary" data-bs-dismiss="modal">
+                        Accept
+                    </button>
+                </div>
             </div>
         </div>
     </div>
