Maintain Generate No PPE

--- a/PLANT_PPE/Views/PPE/Register.cshtml
+++ b/PLANT_PPE/Views/PPE/Register.cshtml
@@ -147,7 +147,7 @@
                 <div class="mb-4">
                     <div class="row">
                         <div class="col-auto">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-terms">Terms &amp; Conditions</a>
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#modal-terms" style="color:blue">Terms &amp; Conditions</a>
                             <span class="text-danger">*</span>
                         </div>
                         <div class="col-auto">
