Approval Section Head

--- a/PLANT_PPE/Views/PPE/Register.cshtml
+++ b/PLANT_PPE/Views/PPE/Register.cshtml
@@ -86,6 +86,7 @@
                 <div class="row mb-3">
                     <label class="col-sm-4 col-form-label" for="txt_noPPE">No PPE</label>
                     <div class="col-sm-8">
+                        <input type="text" class="form-control form-control-sm " id="txt_posPPE" name="txt_posPPE" value="ADM" hidden>
                         <input type="text" class="form-control form-control-sm " id="txt_createBy" name="txt_createBy" value="@Session["Nrp"].ToString()" hidden>
                         <input type="text" class="form-control form-control-sm " id="txt_noPPE" name="txt_noPPE" value="@ViewBag.NoPPE" readonly>
                     </div>
@@ -174,7 +175,7 @@
                     <button type="submit" class="btn btn-sm btn-info" onclick="savePPEtoTable()">
                         <i class="fa fa-floppy-disk opacity-50 me-1"></i> Save
                     </button>
-                    <button type="submit" id="submit_button" class="btn btn-sm btn-success" onclick="savePPE()">
+                    <button type="submit" id="submit_button" class="btn btn-sm btn-success" value="CREATED" onclick="savePPE(this.value)">
                         <i class="fa fa-check-circle opacity-50 me-1"></i> Submit
                     </button>
                 </div>
@@ -217,7 +218,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="modal-terms" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="modal-terms" tabindex="-1" role="dialog" aria-hidden="true" data-bs-backdrop="static">
     <div class="modal-dialog modal-dialog-popin">
         <div class="modal-content">
             <div class="block block-rounded shadow-none mb-0">
