--- a/PLANT_PPE/Views/Shared/_Layout.cshtml
+++ b/PLANT_PPE/Views/Shared/_Layout.cshtml
@@ -215,7 +215,7 @@
     <script src="~/Content/assets/js/pages/be_forms_validation.min.js"></script>*@
     <!-- Page JS Helpers (CKEditor 5 plugins) -->
     <script>
-        Codebase.helpersOnLoad(['js-ckeditor5', 'jq-notify']);
+        Codebase.helpersOnLoad(['js-ckeditor5', 'jq-notify', 'cb-table-tools-checkable', 'cb-table-tools-sections']);
     </script>
 
     <script src="@Html.Raw(ViewBag.JS)"></script>
