--- a/PLANT_PPE/Views/Approval/DetailPPE.cshtml
+++ b/PLANT_PPE/Views/Approval/DetailPPE.cshtml
@@ -91,24 +91,18 @@
 
 <div class="block block-rounded block-link-shadow">
     <div class="block-header">
-        <h3 class="block-title">Remarks/Reason to cancel</h3>
+        <h3 class="block-title">Remarks</h3>
     </div>
     <div class="block-content">
         <div class="mb-3">
-            <textarea class="form-control form-control-sm" id="txt_note" name="txt_note"></textarea>
+            <textarea class="form-control form-control-sm" id="txt_note" name="txt_note" readonly></textarea>
         </div>
     </div>
     <div class="block-content block-content-full block-content-sm bg-body-light fs-sm">
         <div class="block-options justify-content-center">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <a href="/Approval/SectionHead" class="btn btn-sm btn-info"><i class="fa fa-backward opacity-50 me-1"></i>Back</a>
-                    <button type="submit" class="btn btn-sm btn-danger" value="PLANNER CANCEL" onclick="submitApproval(this.value)">
-                        <i class="fa fa-times opacity-50 me-1"></i> Cancel
-                    </button>
-                    <button type="submit" class="btn btn-sm btn-success" value="PLANNER APPROVED" onclick="submitApproval(this.value)">
-                        <i class="fa fa-check-circle opacity-50 me-1"></i> Approve
-                    </button>
+                    <a href="/Approval/SectionHead" class="btn btn-sm btn-info"><i class="fa fa-backward opacity-50 me-1"></i>Back</a>                    
                 </div>
             </div>
         </div>
