--- a/PLANT_PPE/Views/Approval/SectionHead.cshtml
+++ b/PLANT_PPE/Views/Approval/SectionHead.cshtml
@@ -50,7 +50,7 @@
         <div class="block-options justify-content-center">
             <div class="row text-center">
                 <div class="col-md-12">
-                    <button type="submit" class="btn btn-sm btn-danger" value="APPROVAL CANCEL" onclick="submitApproval(this.value)">
+                    <button type="submit" class="btn btn-sm btn-danger" value="REJECT" onclick="submitApproval(this.value)">
                         <i class="fa fa-times opacity-50 me-1"></i> Cancel
                     </button>
                     <button type="submit" class="btn btn-sm btn-success" value="SEC.HEAD APPROVED" onclick="submitApproval(this.value)">
