--- a/PLANT_PPE/Views/Setting/Users.cshtml
+++ b/PLANT_PPE/Views/Setting/Users.cshtml
@@ -52,7 +52,7 @@
                 <div class="block-content fs-sm">
                     <div class="mb-4">
                         <label class="form-label" for="txt_nrp">Username</label>
-                        <select class="js-select2 form-select select2-modal" id="txt_nrp" name="txt_nrp" style="width: 100%;">
+                        <select class="js-select2 form-select " id="txt_nrp" name="txt_nrp" style="width: 100%;">
                             <option></option>
                             @foreach (var item in ViewBag.Emp)
                             {
